--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
     </h3>
      <img src="images/chua75.jpg" alt="Amy Chua" width="75">
      <p><em>Contact us by phone</em> at (559)555-1212 for ticket information.
-  Designed by: Henil Sangani</p>
+  </p>
  </main>
  <footer>
-  <p>&copy;2022, San Joaquin Valley Town Hall, Fresno CA 93755.</p>
+  <p>&copy;Designed by: Henil Sangani 2022, San Joaquin Valley Town Hall, Fresno CA 93755.</p>
  </footer>
  </body>
  </html>
